Fixed images titles in latex file

--- a/course/documentation/5_main/time_forecast.tex
+++ b/course/documentation/5_main/time_forecast.tex
@@ -130,7 +130,7 @@
 Їх було виправлено за принципом найближчих сусідів ---
 середнє арифметичне найближчих точок.
 Маємо графік з даними без аномалій та зглажуванням,
-яке тепер значно краще описує ряд
+яке тепер значно краще описує ряд (рис. \ref{fig:anomaly:fixed}).
 
 \begin{figure}[h!]
   \centering
@@ -166,7 +166,7 @@
 \begin{figure}[h!]
   \centering
   \includegraphics[width=\textwidth]{Coursework_files/Coursework_24_0.png}
-  \caption{Помилки тренду}
+  \caption{Фільтр з кращими параметрами}
   \label{fig:span:fixed}
 \end{figure}
 % \begin{center}
@@ -204,7 +204,7 @@
 \begin{figure}[h!]
   \centering
   \includegraphics[width=\textwidth]{Coursework_files/Coursework_27_0.png}
-  \caption{Фільтр з кращими параметрами}
+  \caption{Помилки тренду}
   \label{fig:error:source}
 \end{figure}
 % \begin{center}
