Added prediction results images to conclusions

--- a/course/documentation/8_conclusion/main.tex
+++ b/course/documentation/8_conclusion/main.tex
@@ -10,7 +10,8 @@
 \end{enumerate}
 
 Хоча обидва методи показали себе добре,
-проте прогноз на основі ретроданих краще.
+проте прогноз на основі ретроданих проявив себе краще
+(рис. \ref{fig:y:forecast:final}).
 Це було визначено за допомогою порівняння середньоквадратичного відхилення
 помилок прогнозу для існуючих даних.
 Прогноз за ретроданими дав помилку $\sigma = 24.06$,
@@ -31,8 +32,15 @@
 
 \begin{figure}[h!]
   \centering
+  \includegraphics[width=\textwidth]{Coursework3_files/Coursework3_9_0.png}
+  \caption{Результати прогнозу}
+  \label{fig:y:forecast:final}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
   \includegraphics[width=\textwidth]{Coursework3_files/Coursework3_8_0.png}
-  \caption{Порівняння прогнозів $Y$ за ретроданими та моделлю $X$}
+  \caption{Порівняння методів прогнозу}
   \label{fig:y:forecast:comparison}
 \end{figure}
 % \begin{center}
